# a-rtd

./: .gitignore  README.md  pyproject.toml
src/a_rtd/: __init__.py  cli.py  config.py  diff.py  manifest.py  profiles.py  render.py  update.py
src/a_rtd/sphinx_ext/: __init__.py
src/a_rtd/templates/common/: AGENTS.md.j2  gitignore.j2
src/a_rtd/templates/examples/docs/: index.md.j2
src/a_rtd/templates/examples/docs/chapters/: interactive-example.md.j2
src/a_rtd/templates/examples/tests/: helpers.py.j2  test_site.py.j2
src/a_rtd/templates/sphinx/: README.md.j2  conf.py.j2  readthedocs.yaml.j2  requirements.txt.j2  vscode-settings.json.j2
tests/: test_cli.py  test_core.py  test_sphinx_ext.py
